--- a/src/scss/utilities/index.scss
+++ b/src/scss/utilities/index.scss
@@ -1,6 +1,7 @@
-@forward './variables';
 @forward './breakpoints';
+@forward './classes';
 @forward './functions';
 @forward './grid';
 @forward './mixins';
 @forward './typography';
+@forward './variables';
